--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,7 +1,7 @@
-<h1>Luxury Glow</h1>
+<h1>Discover Your Radiant Beauty at Luxury Glam</h1>
 
-<h5>NPM: </h5>
-<p>{{ npm }}</p> <!-- Ubah sesuai dengan npm kamu -->
+<h5>App Name: </h5>
+<p>{{ app name }}</p> <!-- Ubah sesuai dengan npm kamu -->
 <h5>Name: </h5>
 <p>{{ name }}</p> <!-- Ubah sesuai dengan nama kamu -->
 <h5>Class: </h5>
