Mengubah judul pada localhost

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,4 +1,4 @@
-<h1>Discover Your Radiant Beauty at Luxury Glam</h1>
+<h1>Discover Your Radiant Beauty at Luxury Glow</h1>
 
 <h5>App: </h5>
 <p>{{ app }}</p> <!-- Ubah sesuai dengan npm kamu -->
