Ubah warna judul lagi

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,4 @@
-<h1 style="text-align: center; color: red;">Discover Your Radiant Beauty at Luxury Glow</h1>
-
+<h1 style="text-align: center; color: #0077BE;">~Discover Your Radiant Beauty at Luxury Glow~</h1>
 <h5>App: </h5>
 <p>{{ app }}</p> <!-- Ubah sesuai dengan npm kamu -->
 <h5>Name: </h5>
