Mengubah warna judul dan isian

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,7 +1,25 @@
-<h1 style="text-align: center; color: #0077BE;">~  Discover Your Radiant Beauty at Luxury Glow  ~</h1>
-<h5>App: </h5>
-<p>{{ app }}</p> <!-- Ubah sesuai dengan npm kamu -->
-<h5>Name: </h5>
-<p>{{ name }}</p> <!-- Ubah sesuai dengan nama kamu -->
-<h5>Class: </h5>
-<p>{{ class }}</p> <!-- Ubah sesuai dengan kelas kamu -->
+<head>
+    <style>
+        /* CSS untuk judul */
+        .title {
+            color: pink; /* Warna untuk judul */
+        }
+
+        /* CSS untuk isian */
+        .content {
+            color: purple; /* Warna untuk isian */
+        }
+    </style>
+</head>
+<body>
+    <h1 style="text-align: center; color: #0077BE;">~  Discover Your Radiant Beauty at Luxury Glow  ~</h1>
+
+    <h5 class="title">App: </h5>
+    <p class="content">{{ app }}</p>
+
+    <h5 class="title">Name: </h5>
+    <p class="content">{{ name }}</p>
+
+    <h5 class="title">NPM: </h5>
+    <p class="content">{{ npm }}</p>
+</body>
