Ubah warna judul lagi

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -2,24 +2,24 @@
     <style>
         /* CSS untuk judul */
         .title {
-            color: pink; /* Warna untuk judul */
+            color: rgb(176, 93, 107); /* Warna untuk judul */
         }
 
         /* CSS untuk isian */
         .content {
-            color: purple; /* Warna untuk isian */
+            color: rgb(159, 66, 159); /* Warna untuk isian */
         }
     </style>
 </head>
 <body>
     <h1 style="text-align: center; color: #0077BE;">~  Discover Your Radiant Beauty at Luxury Glow  ~</h1>
 
-    <h5 class="title">App: </h5>
+    <h5 class="title">App : </h5>
     <p class="content">{{ app }}</p>
 
-    <h5 class="title">Name: </h5>
+    <h5 class="title">Name : </h5>
     <p class="content">{{ name }}</p>
 
-    <h5 class="title">NPM: </h5>
+    <h5 class="title">NPM : </h5>
     <p class="content">{{ npm }}</p>
 </body>
