Ubah isian lagi

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -5,7 +5,7 @@
             text-align: center; /* Memusatkan judul utama */
             color: rgb(25, 112, 162); /* Warna biru laut dalam format RGB */
             font-size: 36px; /* Ukuran font untuk judul utama */
-            margin-bottom: 40px; /* Jarak bawah untuk judul utama */
+            margin-bottom: 90px; /* Jarak bawah untuk judul utama */
         }
 
         /* CSS untuk judul dengan pink agak tua */
@@ -23,12 +23,12 @@
             color: rgb(161, 60, 161); /* Ungu dalam format RGB */
             text-align: center; /* Memusatkan isian */
             font-size: 20px; /* Ukuran font untuk isian */
-            margin-bottom: 20px; /* Jarak bawah untuk isian */
+            margin-bottom: 40px; /* Jarak bawah untuk isian */
         }
     </style>
 </head>
 <body>
-    <h1>Discover Your Radiant Beauty at Luxury Glow</h1>
+    <h1>~  Discover Your Radiant Beauty at Luxury Glow  ~</h1>
 
     <h5 class="title">App: </h5>
     <p class="content">{{ app }}</p>
