Ubah warna latar belakang

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,5 +1,12 @@
 <head>
     <style>
+        /* CSS untuk latar belakang */
+        body {
+            background-color: rgb(255, 253, 208); /* Warna cream dalam format RGB */
+            margin: 0; /* Menghapus margin default */
+            padding: 0; /* Menghapus padding default */
+        }
+
         /* CSS untuk judul utama */
         h1 {
             text-align: center; /* Memusatkan judul utama */
