Ubah isian lagi

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -8,6 +8,8 @@
             display: flex; /* Menggunakan flexbox untuk tata letak */
             flex-direction: column; /* Mengatur tata letak menjadi kolom */
             align-items: center; /* Memusatkan elemen secara horizontal */
+            justify-content: center; /* Memusatkan elemen secara vertikal */
+            height: 100vh; /* Mengatur tinggi body menjadi 100% dari viewport */
         }
 
         /* CSS untuk judul utama */
@@ -15,7 +17,7 @@
             text-align: center; /* Memusatkan judul utama */
             color: rgb(25, 112, 162); /* Warna biru laut dalam format RGB */
             font-size: 36px; /* Ukuran font untuk judul utama */
-            margin-bottom: 90px; /* Jarak bawah untuk judul utama */
+            margin-bottom: 40px; /* Jarak bawah untuk judul utama */
             width: 100%; /* Memastikan judul utama mengambil satu baris penuh */
         }
 
