Ubah peletakkan lagi

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -17,7 +17,7 @@
             text-align: center; /* Memusatkan judul utama */
             color: rgb(25, 112, 162); /* Warna biru laut dalam format RGB */
             font-size: 36px; /* Ukuran font untuk judul utama */
-            margin-bottom: 90px; /* Jarak bawah untuk judul utama */
+            margin: 20px 0 40px 0; /* Jarak atas dan bawah untuk judul utama */
             width: 100%; /* Memastikan judul utama mengambil satu baris penuh */
         }
 
