--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -8,7 +8,6 @@
             display: flex; /* Menggunakan flexbox untuk tata letak */
             flex-direction: column; /* Mengatur tata letak menjadi kolom */
             align-items: center; /* Memusatkan elemen secara horizontal */
-            justify-content: center; /* Memusatkan elemen secara vertikal */
             height: 100vh; /* Mengatur tinggi body menjadi 100% dari viewport */
         }
 
@@ -19,6 +18,8 @@
             font-size: 36px; /* Ukuran font untuk judul utama */
             margin: 20px 0 40px 0; /* Jarak atas dan bawah untuk judul utama */
             width: 100%; /* Memastikan judul utama mengambil satu baris penuh */
+            position: absolute; /* Menggunakan posisi absolut untuk memisahkan dari tata letak flex */
+            top: 20px; /* Mengatur jarak dari atas */
         }
 
         /* CSS untuk wadah informasi */
@@ -26,6 +27,7 @@
             display: flex; /* Menggunakan flexbox untuk menata judul dan isiannya */
             justify-content: space-around; /* Memberikan jarak antar elemen */
             width: 80%; /* Mengatur lebar wadah */
+            margin-top: 100px; /* Jarak atas untuk memisahkan dari judul utama */
             margin-bottom: 50px; /* Jarak bawah untuk wadah */
         }
 
