--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -9,6 +9,7 @@
             flex-direction: column; /* Mengatur tata letak menjadi kolom */
             align-items: center; /* Memusatkan elemen secara horizontal */
             height: 100vh; /* Mengatur tinggi body menjadi 100% dari viewport */
+            position: relative; /* Mengatur posisi relatif untuk menempatkan elemen absolut di dalamnya */
         }
 
         /* CSS untuk judul utama */
@@ -16,7 +17,7 @@
             text-align: center; /* Memusatkan judul utama */
             color: rgb(25, 112, 162); /* Warna biru laut dalam format RGB */
             font-size: 36px; /* Ukuran font untuk judul utama */
-            margin: 20px 0 40px 0; /* Jarak atas dan bawah untuk judul utama */
+            margin: 20px 0; /* Jarak atas dan bawah untuk judul utama */
             width: 100%; /* Memastikan judul utama mengambil satu baris penuh */
             position: absolute; /* Menggunakan posisi absolut untuk memisahkan dari tata letak flex */
             top: 20px; /* Mengatur jarak dari atas */
@@ -27,8 +28,9 @@
             display: flex; /* Menggunakan flexbox untuk menata judul dan isiannya */
             justify-content: space-around; /* Memberikan jarak antar elemen */
             width: 80%; /* Mengatur lebar wadah */
-            margin-top: 100px; /* Jarak atas untuk memisahkan dari judul utama */
+            margin-top: 80px; /* Jarak atas untuk memisahkan dari judul utama */
             margin-bottom: 50px; /* Jarak bawah untuk wadah */
+            align-self: center; /* Memastikan wadah tetap terpusat */
         }
 
         /* CSS untuk judul dengan pink tua */
