Mengubah isi dictionary

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -62,8 +62,8 @@
             <p class="content">{{ name }}</p>
         </div>
         <div>
-            <h5 class="title">NPM :</h5>
-            <p class="content">{{ npm }}</p>
+            <h5 class="title">Kelas :</h5>
+            <p class="content">{{ kelas }}</p>
         </div>
     </div>
 </body>
