Melakukan perubahan pada models

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -52,6 +52,19 @@
 <body>
     <h1>~ Discover Your Radiant Beauty at Luxury Glow ~</h1>
 
+    {% block content %}
+    <h1>Mental Health Tracker</h1>
+
+    <h5>NPM:</h5>
+    <p>{{ npm }}</p>
+
+    <h5>Name:</h5>
+    <p>{{ name }}</p>
+
+    <h5>Class:</h5>
+    <p>{{ class }}</p>
+    {% endblock content %}
+
     <div class="info-container">
         <div>
             <h5 class="title">App :</h5>
