--- a/main/templates/create_product_entry.html
+++ b/main/templates/create_product_entry.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 {% block content %}
-<h1>Add New Skincare Makeup Entry</h1>
+<h1>Add New Product Entry</h1>
 
 <form method="POST">
   {% csrf_token %}
@@ -9,7 +9,7 @@
     <tr>
       <td></td>
       <td>
-        <input type="submit" value="Add Skincare Makeup Entry" />
+        <input type="submit" value="Add Product Entry" />
       </td>
     </tr>
   </table>
