--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -65,8 +65,8 @@
     <p>{{ class }}</p>
     {% endblock content %}
 
-    {% if not skincare_makeup_entries %}
-<p>Belum ada data skincare makeup pada Luxury Glow.</p>
+    {% if not product_entries %}
+<p>Belum ada data sproduct pada Luxury Glow.</p>
 {% else %}
 <table>
   <tr>
@@ -78,13 +78,13 @@
   </tr>
 
   {% comment %} Menampilkan data skincare makeup di bawah baris ini {% endcomment %} 
-  {% for skincare in skincare_makeup_entries %}
+  {% for product_entry in product_entries %}
   <tr>
-    <td>{{ skincare.name }}</td>
-    <td>{{ skincare.price }}</td>
-    <td>{{ skincare.description }}</td>
-    <td>{{ skincare.shade_name }}</td>
-    <td>{{ skincare.stock_quantity }}</td>
+    <td>{{ product_entry.name }}</td>
+    <td>{{ product_entry.price }}</td>
+    <td>{{ product_entry.description }}</td>
+    <td>{{ product.shade_name }}</td>
+    <td>{{ product_entry.stock_quantity }}</td>
   </tr>
   {% endfor %}
 </table>
@@ -92,8 +92,8 @@
 
 <br />
 
-<a href="{% url 'main:create_mood_entry' %}">
-  <button>Add New Skincare Makeup Entry</button>
+<a href="{% url 'main:create_product_entry' %}">
+  <button>Add New Product Entry</button>
 </a>
 
     <div class="info-container">
