--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block meta %} {% endblock meta %}
+    
+    <!-- Load TailwindCSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- Load Global CSS -->
+    <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
+    
   </head>
-
   <body>
     {% block content %} {% endblock content %}
   </body>
