Kasih warna backgorund websitenya

--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -62,7 +62,7 @@
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
+    background-color: #e0a8a8;
   }
 
   .login-container {
