Benerin register HTML

--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -94,6 +94,7 @@
     width: 50%;
     padding: 20px;
     overflow-y: auto; /* Tambahkan scroll jika konten terlalu panjang */
+    max-height: 100vh; /* Batasi tinggi maksimal */
     box-sizing: border-box;
   }
 
@@ -147,7 +148,7 @@
     display: inline-block;
     width: 100%;
     padding: 10px;
-    background-color: #e186a4;
+    background-color: #e91e63;
     color: white;
     border: none;
     border-radius: 5px;
@@ -157,7 +158,7 @@
   }
 
   .register-btn-custom {
-    background-color: #e77fa1;
+    background-color: #e91e63;
   }
 
   .separator {
