--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -30,7 +30,7 @@
             <div class="hidden md:flex items-center">
                 {% if user.is_authenticated %}
                     <span class="text-gray-300 mr-4">Welcome, {{ user.username }}</span>
-                    <a href="{% url 'main:home' %}" class="text-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded transition duration-300 mr-2">Home</a>
+                    <a href="{% url 'main:show_main' %}" class="text-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded transition duration-300 mr-2">Home</a>
                     <a href="{% url 'main:show_products' %}" class="text-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded transition duration-300 mr-2">Product</a>
                     <a href="{% url 'main:logout' %}" class="text-center bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded transition duration-300">Logout</a>
                 {% else %}
@@ -92,7 +92,7 @@ document.addEventListener("DOMContentLoaded", function() {
     <div class="mobile-menu hidden md:hidden px-4 w-full md:max-w-full">
         <div class="pt-2 pb-3 space-y-1 mx-auto">
             {% if user.is_authenticated %}
-                <a href="{% url 'main:home' %}" class="block text-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded transition duration-300">Home</a>
+                <a href="{% url 'main:show_main' %}" class="block text-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded transition duration-300">Home</a>
                 <a href="{% url 'main:show_products' %}" class="block text-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded transition duration-300">Product</a>
                 <a href="{% url 'main:logout' %}" class="block text-center bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded transition duration-300">Logout</a>
             {% else %}
